plugins {
    id 'java-library'
    id 'com.github.ben-manes.versions' version '0.53.0'
    id 'com.diffplug.spotless' version '8.4.0'
    id 'io.qameta.allure' version '4.0.0'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
}

ext {
    junitVersion = '6.0.3'
    lombokVersion = '1.18.44'
    allureVersion = '2.29.0'
    restAssuredVersion = '6.0.0'
}

allure {
    report {
        version.set(allureVersion)
    }
    adapter {
        aspectjWeaver.set(true)
        frameworks {
            junit6 {
                adapterVersion.set(allureVersion)
            }
        }
    }
}

dependencyUpdates {
    rejectVersionIf { selection ->
        def unstable = ['alpha', 'beta', 'rc', 'm', 'snapshot', 'preview', 'eap', 'dev']
        unstable.any { keyword ->
            selection.candidate.version.toLowerCase().contains(keyword)
        }
    }

    checkForGradleUpdate = true
    outputFormatter = "json"
    outputDir = "$buildDir/dependencyUpdates"
    reportfileName = "report"
}


tasks.named("dependencyUpdates") {
    doFirst {
        gradle.startParameter.parallelProjectExecutionEnabled = false
    }
}

dependencies {


    testImplementation platform("org.junit:junit-bom:$junitVersion")

    testImplementation 'org.junit.jupiter:junit-jupiter'
    testImplementation 'org.assertj:assertj-core:3.27.7'

    testImplementation 'org.slf4j:slf4j-simple:2.0.17'
    testImplementation 'org.apache.logging.log4j:log4j-core:2.25.4'

    testImplementation  "io.rest-assured:rest-assured:$restAssuredVersion"
    testImplementation  "io.rest-assured:json-schema-validator:$restAssuredVersion"
    testImplementation  "io.qameta.allure:allure-rest-assured:$allureVersion"

    testImplementation 'com.fasterxml.jackson.core:jackson-databind:2.21.2'

    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    testCompileOnly "org.projectlombok:lombok:$lombokVersion"
    testAnnotationProcessor "org.projectlombok:lombok:$lombokVersion"
}
tasks.test {
    // Пробрасываем нужные системные свойства в тесты
    systemProperties = [
            "allure.results.directory" : file("${buildDir}/allure-results").absolutePath
    ]

    useJUnitPlatform {
        String tags = System.getProperty("groups")
        if (tags != null && !tags.isEmpty()) {
            def tagList = tags.split(",").collect { it.trim() }
            includeTags(tagList as String[])
        }
    }

    dependsOn(tasks.spotlessApply)

    testLogging {
        events = ["passed", "failed", "skipped"]
        exceptionFormat = "short"
    }
}
tasks.withType(JavaCompile).configureEach {
    options.encoding = "UTF-8"
}

tasks.check {
    dependsOn(tasks.spotlessCheck)
}

spotless {

    ratchetFrom = 'origin/main'

    format('misc') {
        target('*.gradle', '*.md', '.gitignore', '.gitattributes')

        trimTrailingWhitespace()
        leadingTabsToSpaces()
        endWithNewline()
    }

    java {
        encoding = 'UTF-8'

        googleJavaFormat('1.34.1')
                .aosp()
                .reflowLongStrings()
                .skipJavadocFormatting()

        removeUnusedImports()
        formatAnnotations()
        endWithNewline()
        custom 'Step one line', {
            it.replaceAll(/step\(\s+"/, 'step("')
        }
    }
}
